7.0.2 (26-10-2022)
- Refactor: Remove branch group subclasses

7.0.1 (17-10-2022)
- Refactor: Remove deprecated shifts enrolment service

7.0.0 (10-10-2022)
- Refactor: Remove deprecated functionalities

6.28.2 (21-09-2022)
- Improvement: Change moodle export auth to ldap
- Refactor: Replace usage of deprecated evaluation season periods API

6.28.1 (21-09-2022)
- Bug Fix: ConclusionInformationDataProvider should not read execution year by date
- Bug Fix: In ULisboaServiceRequest.findByRegistration() use the DML relation instead of finding all requests that match the registration

6.28.0 (01-09-2022)
- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum

6.27.6 (31-08-2022)
- Refactor: Make compatible with fenixedu-academic-core v34.2.0

6.27.5 (24-08-2022)
- Refactor: Remove previous years enrolment rule message override

6.27.4 (02-08-2022)
- Bug Fix: Apply url and postback section for ULisboa service request pages based in permissions, similar to service request authorisations

6.27.3 (25-07-2022)
- Bug fix: Avoid NPE on course group degree info data provider getting previous year

6.27.2 (19-07-2022)
- Refactor: Make compatible with fenixedu-academic-core v34.0.0

6.27.1 (15-07-2022)
- Refactor: Move font to CGD module

6.27.0 (14-06-2022)
- Refactor: Upgrade dependencies versions
- Refactor: Replace usage of deprecated competence course method 
- Refactor: Remove legacy resource allocation functionalities

6.26.2 (06-06-2022)
- Refactor: Redesign of algorithm to calculate credits transfer remarks

6.26.1 (27-05-2022)
- Bug fix: CourseGroupDegreeInfoDataProvider should not read ExecutionYear by date
- Refactor: RegistrationConclusionBean constructor cleanup

6.26.0 (12-05-2022)
- Refactor: Move SAS/SICABE integration code to legal pt 
- Refactor: Update academic-core dependency

6.25.9 (07-10-2021)
- Bug fix: Using streams instead of byte arrays in site attachment copies

6.25.8 (24-09-2021)